# proton-rust-client

./: .gitignore  BUILD.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Handover.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  makefile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: rust-audit.yml  rust-linter.yml  rust-release.yml  rust-tests.yml
examples/: README.md  README_EXAMPLES.md
examples/prepare/: main.rs
examples/query/: main.rs
examples/remove/: main.rs
scripts/: check.sh  clean.sh  example.sh  format.sh  release.sh  run.sh  test.sh  update.sh
src/lib/: alias.rs  default.rs  display.rs  error.rs  fetch.rs  getters.rs  insert.rs  mod.rs  prelude.rs  query.rs  stream.rs
tests/: default_test.rs  display_tests.rs  error_tests.rs  fetch_tests.rs  getter_tests.rs  insert_tests.rs  mod.rs  new_tests.rs  query_tests.rs
