[package]
name = "proton_client"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "prepare"
path = "src/bin/prepare.rs"


[[bin]]
name = "main"
path = "src/bin/main.rs"


[[bin]]
name = "cleanup"
path = "src/bin/cleanup.rs"


[lib]
name = "proton"
path = "src/lib/mod.rs"


[dependencies]
clickhouse = { version = "0.11", features = ["watch"] }
clickhouse-derive = { version = "0.1"}
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.196", features = ["derive"] }


[dev-dependencies]
clickhouse = { version = "0.11", features = ["test-util"] }