[package]
name = "proton_client"
version = "0.1.0"
edition = "2021"


[lib]
name = "proton_client"
path = "src/lib/mod.rs"


[[example]]
name = "prepare"
path = "examples/prepare/main.rs"


[[example]]
name = "query"
path = "examples/query/main.rs"


[[example]]
name = "remove"
path = "examples/remove/main.rs"


[dependencies]
clickhouse = { version = "0.11", features = ["watch"] }
clickhouse-derive = { version = "0.1"}
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.196", features = ["derive"] }


[dev-dependencies]
clickhouse = { version = "0.11", features = ["test-util"] }