[package]
name = "proton_client"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
readme = "README.md"
license = "Apache-2.0"

authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]
description = "Client for Timeplus Proton, a streaming SQL engine"
documentation = "https://docs.rs/proton_client"
homepage = "https://github.com/timeplus-io/proton-rust-client"
repository = "https://github.com/timeplus-io/proton-rust-client"
keywords = ["proton", "timeplus", "streaming", "sql", "database", "timeseries"]

[lib]
name = "proton_client"
path = "src/lib/mod.rs"


[[example]]
name = "prepare"
path = "examples/prepare/main.rs"


[[example]]
name = "query"
path = "examples/query/main.rs"


[[example]]
name = "remove"
path = "examples/remove/main.rs"


[dependencies]
clickhouse = { version = "0.11", features = ["watch"] }
clickhouse-derive = { version = "0.1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.196", features = ["derive"] }


[dev-dependencies]
clickhouse = { version = "0.11", features = ["test-util"] }
